corrected gap betweem featured and list container for home series and movies screens

--- a/client/src/components/featured/featured.scss
+++ b/client/src/components/featured/featured.scss
@@ -32,7 +32,7 @@
     width: 35%;
     position: absolute;
     left: 50px;
-    bottom: 100px;
+    bottom: 200px;
     color: white;
     display: flex;
     flex-direction: column;
