--- a/client/src/components/trendingItem/trendingItem.scss
+++ b/client/src/components/trendingItem/trendingItem.scss
@@ -1,7 +1,7 @@
 .trendingListItem {
   width: 240px;
   height: 250px;
-  background-color: var(--main-color);
+  // background-color: var(--main-color);
   margin-right: 5px;
   overflow: hidden;
   cursor: pointer;
