--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -1,9 +1,13 @@
 .home{
-  background-color: var(--main-color);
+  background-color: var(--main-color); 
   // background-color: rgb(32, 31, 31);
   overflow: hidden;
-}
 
-.listContainer {
-  margin: 40px 0px;
-} 
+
+  .listContainer {
+  margin: -100px 0px 0px 0px ;
+  // display: flex;
+  position: absolute;
+  
+  } 
+}
