--- a/client/src/pages/shows/series.scss
+++ b/client/src/pages/shows/series.scss
@@ -2,9 +2,9 @@
   background-color: var(--main-color);
   // background-color: rgb(32, 31, 31);
   overflow: hidden;
-} 
 
-.listContainer {
-  margin: 160px 0px;
-  // top: 100;
-}
+  .listContainer {
+    margin: -100px 0px 0px 0px ;
+    position: absolute;
+  }
+} 
